@@ -244,9 +244,9 @@ module Padrino
               path = process_path_for_parent_params(path, parent_params)
             end
 
-            # Little reformats
-            path.sub!(%r{\bindex$}, "")                               # If the route end with /index we remove them
+            # Little reformats                       
             path.sub!(%r^/index(\(.\{:format[\,\w\$\|]*\}\))$^, '\1') # Remove index from formatted routes
+            path.sub!(%r{\bindex(.*)$}, '\1')                         # If the route contains /index we remove that    
             path = (uri_root == "/" ? "/" : "(/)") if path.blank?     # Add a trailing delimiter if path is empty
 
             # We need to have a path that start with / in some circumstances and that don't end with /
