@@ -8,7 +8,8 @@
 * Removed VERSION files. This prevent problems described here: http://github.com/nex3/haml/issues/issue/24
 * Added default values for controllers
 * Updated sequel generation to work with sqlite3.
-* Added couchdb support for padrino-admin
+* Added couchdb support for padrino-admin.
+* Fixes support for index action with params.
 
 == 0.9.9
 
